# carplayer

./: CMakeLists.txt  ctrl.cpp  ctrl.h  datahandler.cpp  datahandler.h  headfile.h  imagehandler.cpp  imagehandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  maphandler.cpp  maphandler.h  motor.cpp  motor.h  speed.cpp  speed.h  stack.cpp  stack.h
qss/: resources.qrc
